test/classes/hannah/configSinglesNotSupported.good
configSinglesNotSupported.chpl:1: error: config variables of single type are not supported
