test/classes/hannah/configSinglesNotSupported.chpl
config var n$ : single int;
